Fix cut off hover effect in table by removing padding of container

--- a/dark.css
+++ b/dark.css
@@ -120,7 +120,6 @@ footer {
 .container {
     margin-top: 5px;
     margin-bottom: 5px;
-    padding: 30px;
     border-radius: 10px;
     background-color: #353535;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
