--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ footer {
 .container {
   margin-top: 5px;
   margin-bottom: 5px;
-  padding: 30px;
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
@@ -151,7 +150,7 @@ tr {
 
 tr:hover {
 	opacity: 0.8;
-	transform: scale(1.05);
+	/* transform: scale(1.05); */
 }
 
 
